web/src/styles/properties.css
/* NODE PROPERTIES STYLES */

/**
 * Styles for node properties in the node editor
 */

/* General property */
.node-property,
.node-output {
  position: relative;
  width: auto;
  /* max-width: 400px; */
  min-height: 18px;
  border: 0;
  padding: 0 9px;
  margin-bottom: 9px;
  line-height: 18px;
}

.node-property:last-child {
  margin-bottom: 0;
}

.node-property .react-flow__handle {
  margin-top: 1px;
}

.node-output {
  padding: 0 1em;
  margin: 1px 0 0;
}

/* Code display */
.node-property code {
  display: block;
  margin: 0.6em 0 0;
  font-size: var(--font-size-smaller);
  background-color: var(--c_gray1);
  padding: 0.1em 0.2em;
  user-select: text;
  cursor: text;
  line-height: 1.2em;
  word-spacing: -2px;
}

/* Boolean property */
.node-property.bool {
  min-width: 35px;
}

.bool-property {
  padding: 0;
  display: flex;
  align-items: flex-start;

  gap: 5px;
}

/* values */
.value-changed .value {
  color: var(--c_hl1);
}

.value-changed textarea,
/* .value-changed .MuiSwitch-track, */
.value-changed .MuiInput-root {
  border-right: 2px solid var(--c_hl1) !important;
}

.value-changed .MuiSwitch-track {
  padding-right: 1em;
  opacity: 1;
  border-bottom: 2px solid var(--c_hl1) !important;
   background-color: var(--c_gray3) !important;
  /* opacity: 0.4; */
}

/* Textarea */
.node-property .MuiTextField-root textarea {
  font-size: var(--font-size-smaller);
}

.node-property textarea {
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  overflow-y: auto !important;
  margin-top: 0.2em;
  padding: 0.2em 0.5em;
  font-family: var(--font_family);
  font-size: var(--font-size-tiny);
  line-height: 1.1em;
  color: var(--c_white);
  background-color: var(--c_gray2);
  border: 0;
  font-weight: 300;
}

/* List view */
.node-property.list ul {
  max-height: 500px;
  overflow-y: auto;
  padding: 0;
  margin: 0 0 2px 0;
}

/* Dropzone */
.dropzone {
  position: relative;
  outline: 1px dashed #55555599;
  margin: 0;
}

.node-property .dropzone:hover {
  outline: 1px dashed #77777799;
}

.dropzone p.centered {
  margin: auto;
  text-align: left;
  padding: 0.4em 0.5em 0;
  min-width: 60px;
  min-height: 14px;
  line-height: 1.1em;
  font-family: var(--font_family2);
  word-spacing: -2px;
  font-size: var(--font-size-tiny);
  color: var(--c_gray4);
}

.dropzone img {
  height: auto;
  max-width: 100%;
  max-height: 300px;
  margin: 0 auto;
  display: block;
  width: auto !important;
}

.node-property .dropzone.dropped {
  outline: 0 none;
  border: 0;
}

/* REFACTORED PROPERTY STYLES */

.property-label {
  max-width: 90%;
  margin-bottom: 1px;
  padding: 0;
  overflow: visible;
}

.property-label label {
  display: block;
  font-weight: 300;
  color: var(--c_gray6);
  font-family: var(--font-family-1);
  font-size: var(--font-size-normal);
  padding: 0;
  margin: 0;
  line-height: 1.05em;
  max-height: 2em;
  overflow: hidden;
}
.image-property .property-label {
  margin-bottom: 5px;
}

/* STRING */
.string-property .container {
  position: relative;
  /* box-sizing: content-box; */
  display: flex;
  gap: 5px;
  align-items: center;
  width: 100%;
  /* margin-top: 5px; */
  /* margin-bottom: 2px; */
}

.value-changed .string-property input {
  border-right: 2px solid var(--c_hl1);
}

.string-property .container .expand-button {
  width: 20px;
  border-radius: 2px;
}

.string-property input {
  width: 100%;
  outline: none;
  margin: 0;
  padding: 1em 0.5em;
  color: var(--c_white);
  background-color: var(--c_gray1);
  border: none;
  border-radius: 0.1em;
  font-family: var(--font-family-1);
  font-weight: 300;
  font-size: var(--font-size-smaller);
  line-height: 1.2em;
  height: 1.2em;
}
.string-property .expand-button {
  cursor: pointer;
  width: 1em;
  height: auto;
  font-size: 1em;
  padding: 0 0.5em;
  display: flex;
  justify-content: center;
  border-radius: 0.1em;
  border: none;
  color: var(--c-gray6);
  background-color: var(--c_gray2);
  font-weight: bold;
  transition: color 0.2s;
}
.string-property .expand-button:hover {
  color: var(--c_hl1);
}

/* SELECT */
.node-property select::-ms-expand {
  display: none;
}

.node-property select {
  /* appearance: none; */
  position: relative;
  color: var(--c_gray6);
  background-color: var(--c_gray1);
  border-radius: 0.25em;
  border: none;
  padding: 0 1em 0 0;
  margin: 0;
  width: 100%;
  cursor: inherit;
  line-height: inherit;
  outline: none;
  font-size: var(--font-size-normal);
}

.node-property select option:checked,
.node-property select option:active {
  color: var(--c_white);
  background-color: var(--c_gray2);
}
.enum-property select,
.model-property select {
  width: 100%;
  height: 18px;
  margin: 0px;
  padding: 0px;
  background-color: var(--c_gray2);
  color: var(--c_white);
  border-radius: 0.1em;
  font-family: var(--font-family-1);
  font-size: var(--font-size-normal);
  /* box-sizing: content-box; */
}
.enum-property select:hover,
.model-property select:hover {
  background-color: var(--c_gray3);
}

.value-changed .enum-property select,
.value-changed .model-property select {
  border-right: 2px solid var(--c_hl1);
}
.enum-property select option,
.model-property select option {
  background-color: var(--c_gray1);
  padding: 2em 1em;
  font-size: var(--font-size-bigger);
}

/* NUMBER */
.number-input {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: flex-start;
  cursor: ew-resize !important;
}

.number-input label {
  cursor: ew-resize !important;
}

.number-input .value {
  margin-top: 3px;
  font-size: var(--font-size-normal);
}

.number-input .slider-value {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: flex-start;
  top: -1px;
  left: 0;
}

.number-input .slider-value .name {
  position: relative;
  text-transform: uppercase;
  display: block;
  top: 1px;
  width: 100%;
  max-width: 200px;
  min-height: 15px;
  word-spacing: -0.3em;
  margin-right: 45px;
  white-space: normal;
  padding-bottom: 3px;
  line-height: 0.86em;
}

.number-input .slider-value .value {
  position: absolute;
  color: var(--c_gray6);
  max-width: 80px;
  height: 1em;
  top: 0px;
  right: 0px;
  margin: 0;
  line-height: 1em;
  font-family: var(--font_family2);
  background-color: transparent;
  padding: 0px;
  overflow: hidden;
  text-overflow: ellipsis;
  flex: 1;
  text-align: right;
  min-width: 25px;
}
.value-changed .number-input .value {
  color: var(--c_hl1);
}
.number-input .edit-value {
  position: absolute;
  outline: none;
  color: var(--c_white);
  background-color: var(--c_gray1);
  border: none;
  border-radius: 0;
  font-family: var(--font_family2);
  font-size: var(--font-size-normal);
  line-height: 1.5em;
  height: 12px;
  top: 2px;
  right: 0;
  margin: 0;
  padding: 0;
  text-align: right;
  max-width: 100px;
}

.number-input .edit-value input::selection {
  background-color: var(--c-hl1);
}

.number-input .MuiSlider-root .MuiSlider-thumb {
  opacity: 0;
}

.number-input:hover .MuiSlider-root .MuiSlider-thumb {
  opacity: 1;
}

.number-input .MuiSlider-root .MuiSlider-track {
  background-color: transparent;
  transition: background-color 0.2s 0.2s;
}

.number-input .MuiSlider-root:hover .MuiSlider-track,
.number-input .MuiSlider-root:active .MuiSlider-track,
.number-input .MuiSlider-root:focus .MuiSlider-track {
  background-color: #8eaca733;
  transition: background-color 0.2s 0s;
}

.number-input .range-container {
  transition: opacity 0.2s;
  position: absolute;
  bottom: -4px;
  width: 100%;
  height: 3px;
  border-radius: 2px;
  font-size: 0.5em;
  overflow: hidden;
}

.number-input .range-indicator {
  position: absolute;
  left: 0;
  height: 2px;
  min-width: 1px;
}

.custom-select {
  position: relative;
  width: 100%;
  font-family: var(--font-family-1);
}

.custom-select .select-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 2px 0 4px 0;
  padding: 0px 3px;
  background-color: var(--c_gray1);
  border-radius: 2px;
  cursor: pointer;
}

.custom-select .select-header-text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.custom-select .arrow {
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid var(--c_gray4);
  flex-shrink: 0;
  margin-left: 5px;
}

.custom-select.open .arrow {
  transform: rotate(180deg);
}

.custom-select .options-list {
  position: absolute;
  top: 100%;
  left: 0;
  background-color: var(--c_gray1);
  border-radius: 0 0 2px 2px;
  list-style-type: none;
  padding: 0;
  margin: 0;
  max-height: 200px;
  overflow-y: auto;
  z-index: 20000;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
  width: max-content;
  min-width: 100%;
}

.custom-select .option {
  padding: 5px;
  cursor: pointer;
  white-space: nowrap;
}

.custom-select .option:hover {
  background-color: var(--c_gray2);
}

.custom-select .option.selected {
  background-color: var(--c_gray3);
  font-weight: bold;
}

.expand-button {
  padding: 6px;
  min-width: 18px;
  height: 18px;
  border-radius: 5px;
  font-size: 8px;
  font-weight: 600;
  border-style: none;
  background-color: var(--background-paper);
  color: var(--text-secondary);
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 0.2s ease;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
}

.expand-button:hover {
  background-color: var(--c_gray2);
  border-color: var(--c_hl);
  border-width: 1px;
  border-style: solid;
  color: var(--text-primary);
  /* transform: translateY(1px); */
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
}

.expand-button:active {
  transform: translateY(2px);
  box-shadow: none;
}

.container {
  display: flex;
  gap: 8px;
  align-items: center;
}

.container input {
  flex: 1;
  padding: em 0.5em;
  border: 1px solid var(--c_gray3);
  border-radius: 4px;
  color: var(--text-primary);
}

.container input:focus {
  border-color: var(--c_hl);
  box-shadow: 0 0 0 2px var(--c_hl25);
}

/* Property Input Container */
.property-input-container {
  position: relative;
  gap: 0.5em;
}

.property-input-container .action-icons {
  position: absolute;
  right: 0;
  top: 25%;
  transform: translateY(-50%);
  display: flex;
  align-items: center;
  opacity: 0;
  transition: opacity 0.2s;
  background-color: var(--background-color);
  padding: 0 4px;
}

.property-input-container:hover .action-icons {
  opacity: 1;
}

.property-input-container .action-icon:hover {
  opacity: 1;
}

.property-input-container .action-icon {
  font-size: 1.2em;
  cursor: pointer;
  margin: 0.2em 0.2em 0.2em 0.5em;
}

.property-input-container .action-icon.close {
  margin: 0.2em 0.5em 0.2em 0;
}

/* Property Name Edit Input */
.property-name-edit {
  padding: 2px 4px;
  border: 1px solid #666;
  border-radius: 3px;
  background: transparent;
  color: inherit;
  font-size: inherit;
}

/* Property Input Form */
.property-input-form {
  display: inline;
}

.property-input-form input {
  padding: 2px 4px;
  border: 1px solid #666;
  border-radius: 3px;
  background: transparent;
  color: inherit;
  font-size: inherit;
}

